
[project]
name = "hmexpcomp"
version = "0.1.0"
description = "Harmonie experiments comparison tool"
authors = [
    {name = "Leif Denby", email = "lcd@dmi.dk"},
]
dependencies = [
    "numpy>=1.24.3",
    "pandas>=2.0.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.3.2",
]
